--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,8 @@ dependencies:
   json_annotation: ^4.8.1
   encrypt: ^5.0.1
   shared_preferences: ^2.2.2
-  http: ^0.13.6
-  logger: ^1.4.0
+  http: ">=0.13.6 <2.0.0"
+  logger: ^2.0.0
   mime: ^1.0.4
   connectivity_plus: ^5.0.1
   http_parser: ^4.0.2
